# replicatr

./: .gitignore  README.md  export.json  export.json.REMOVED.git-id  glibc-2.29.tar.gz.REMOVED.git-id  glibc-2.34.tar.gz.REMOVED.git-id  go.mod  go.sum  hotreload.sh  main.go  marker.file
.github/workflows/: go.yml
app/: acl.go  aclfilter.go  adding.go  auth.go  broadcasting.go  chat.go  chatcommands.go  config.go  envelopes.go  export.go  filterpriv.go  handlecount.go  handledelete.go  handlefilter.go  handlenip11.go  handlerelayinfo.go  helpers.go  http.go  import.go  listener.go  policiesevents.go  policiesfilters.go  policiesnip4.go  relay.go  rescan.go  spam.go  start.go  wipe.go  wshandler.go  wsprocess.go  wsread.go  wswatcher.go
app/acl/: acl.go  acl_test.go
cmd/agent/: main.go
cmd/algia/: config.go  extract.go  main.go  profile.go  timeline.go  zap.go
cmd/authr/: authr.go
cmd/blower/: README.md  main.go
cmd/canister/: Cargo.toml  canister_ids.json  dfx.json
cmd/canister/src/replicatr/: Cargo.toml
cmd/canister/src/replicatr/src/: db.rs  lib.rs  owner.rs
cmd/testnet/src/testnet_backend/: Cargo.toml
cmd/testnet/src/testnet_backend/src/: acl.rs  db.rs  lib.rs  methods.rs  owner.rs  structs.rs
doc/: acl.md  arch.md  canister.md  chaindata.md  cluster.md  golang.md  logger.md  problem.md  sync.md
khatru/: adding.go  broadcasting.go  deleting.go  handlers.go  helpers.go  listener.go  relay.go  responding.go  utils.go
pkg/ic/testnet/src/testnet_backend/: Cargo.toml  testnet_backend.did
pkg/ic/testnet/src/testnet_backend/src/: lib.rs
(+808 files in other folders)
