[package]
name = "replicatr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.4" 
candid = "0.10.3" 
serde = "1.0.197"
ic-stable-structures = "0.6.1"
base64 = "0.22.1" 

